# dotdot

./: .ctags  .gitconfig  .gitignore  .p10k.zsh  .tmux.conf  .vimrc  .zprofile  .zshenv  .zshrc  Brewfile  README.md
.config/nvim/: .gitignore  .luarc.json  .stylua.toml  100_note.md  AGENTS.md  coc-settings.json  dprint.json  filetype.lua  ginit.vim  highlight_fk_about.lua  init.lua  init.vim  init.vim.bak  lazy-lock.json  mdsf.json  neovim.toml  nvim.toml  plugins.lua.bak  pyproject.toml  scratch.lua.bak  scratch1.py  seg_fault.vim.bak  selene.toml  stylua.toml  tags  time_test.lua.bak  tokyonight-storm.json  vim.toml  vim.toml.bak
.config/nvim/after/ftplugin/: NeogitCommitMessage.lua  go.lua  go.vim  help.lua  help.vim  json.lua  julia.lua  lazy.lua  log.lua  log.vim  lua.lua  lua.vim.bak  markdown.lua  markdown.vim  markdown.vim.bak  norg.lua  org.lua  python.lua  python.vim  qf.lua  qf.vim  quarto.lua  yaml.lua  zsh.lua
.config/nvim/after/lsp/: basedpyright.lua  bashls.lua  biome.lua  jedi.lua  jsonls.lua  julials.lua  lua_ls.lua  markdown_oxide.lua  marksman.lua  pyright.lua  ruff.lua  taplo.lua  ts_query_ls.lua  ty.lua  yamlls.lua
.config/nvim/after/plugin/: highlights.vim.bak  python-cc.lua  python-env.lua.bak  python.lua  python_env.lua  runcode.lua.bak
.config/nvim/catppuccin/: cached  frappe  latte  macchiato  mocha
.config/nvim/config/: Hs_Rs_Ts_cfg.vim.bak  Startify_cfg.vim  WhichKey_cfg.vim.bak  airline.vim  clap_cfg.vim  coc.vim  fzf.vim  gitgutter.vim  lf_lazygit_ranger_tig_cfg.vim.bak  mapkeys.vim  tagbar.vim  vista_cfg.vim.bak  webdevicons.vim
.config/nvim/ftplugin/: lspinfo.lua  lua.lua  lua.lua.bak  markdown.lua  markdown.vim  norg.lua  py_scratch.vim.bak  python.lua  quarto.lua
.config/nvim/lsp/: basedpyright.lua  bashls.lua  jedi.lua  jsonls.lua  julials.lua  lua_ls.lua  markdown_oxide.lua  ruff.lua  sith-lsp.lua  taplo.lua  ty.lua
.config/nvim/lua/: .stylua.toml  buf_line.lua  defaults.lua  galaxyline.lua.bak  lsp.lua.bak  nvimux.lua.bak  popfix.lua.bak  repl.lua.bak  scratch.lua.bak  tools.lua.bak  tree.lua
.config/nvim/luasnippets/: dart.lua  help.lua  lua.lua  python.lua  vim.lua
.config/nvim/personal_notes/: 100_note.md  excel_08_28_2025_notes.qmd  quoptes.md
.config/nvim/plugin/: attach.lua  autocommands.lua  buildrun.lua  colors.lua  diagnostic.lua  env.lua  euporie.lua  folds.lua  lsp.lua  mappings.lua  nb.lua  numbers.lua  quickfix.lua  statuscolumn.lua  statusline.lua  whitespace.lua  winbar.lua
.config/nvim/python/: dependency-sync.py
.config/nvim/syntax/: NeogitStatus.lua
.config/nvim/test/: .repos.txt  2  Manifest.toml  Project.toml  aria2_recurse.py  backward_elimination_linear_models.jl  bc_class_test.py  best_est.jl  best_est.md  best_est.py  best_test.html  best_test.qmd  bqplot_test.py  bs_test.py  clt.jl  complex_pd_filter.py  copy_ref_test.py  debug_ex.jl  dict_test.py  ds_stats_test.py  dummy_stock_data.py  elaborate_mpl_text.py  elaborate_text.py  example5.py  expected_move.py  financial_toolbox.qmd  generators.py  git-stash-list-all  greeks_temp.py  learn_dat_sci.qmd  learn_dat_sci.qmd.otter.py  lichess_df.jl  malliavin_delta_gbm.py  multiple_dispatchjl.qmd  natenburg_replica.jl  nvimpie_test.py  oop_classes.py  optimization.html  optimization.qmd  parser_bc_test.py  (+19 more)
(+1403 files in other folders)
